Library Override: Parenting library override objects does not save offset from parent. #70948

Closed
opened 2019-10-20 01:22:12 +02:00 by Zach Hixson · 7 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35

Blender Version
Broken: version: 2.81 (sub 15), branch: master, commit date: 2019-10-11 19:43, hash: 60d02b336e

Short description of error
If you parent an object that is part of a collection which has been library overridden to something else, then next time the file is loaded the overridden object is offset from it's correct position, with the object's origin now being placed at the origin of the parent.

Exact steps for others to reproduce the error

  1. make a library override of a collection of objects.
  2. Parent one of those objects to something like an empty (the empty should be anywhere but the origin)
  3. Save and reload the file.

#70948.zip

  • open main.blend [has collection linked from lib.blend which was made a library override]
  • select, Torus, then select Empty, {key Ctrl P} Object
  • save
  • reopen, result should be the same as main_saved.blend (Torus origin is now at Empty's origin)
**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.35 **Blender Version** Broken: version: 2.81 (sub 15), branch: master, commit date: 2019-10-11 19:43, hash: `60d02b336e` **Short description of error** If you parent an object that is part of a collection which has been library overridden to something else, then next time the file is loaded the overridden object is offset from it's correct position, with the object's origin now being placed at the origin of the parent. **Exact steps for others to reproduce the error** 1. make a library override of a collection of objects. 2. Parent one of those objects to something like an empty (the empty should be anywhere but the origin) 3. Save and reload the file. [#70948.zip](https://archive.blender.org/developer/F8319088/T70948.zip) - open main.blend [has collection linked from `lib.blend` which was made a library override] - select, `Torus`, then select `Empty`, {key Ctrl P} Object - save - reopen, result should be the same as `main_saved.blend` (Torus origin is now at Empty's origin)
Author

Added subscriber: @ZachHixson

Added subscriber: @ZachHixson
Zach Hixson changed title from Parenting library override objects leads to undesired offsets to Parenting library override objects does not save offset from parent. 2019-10-20 01:22:43 +02:00
Philipp Oeser changed title from Parenting library override objects does not save offset from parent. to Library Override: Parenting library override objects does not save offset from parent. 2019-10-23 15:06:38 +02:00
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Member

Can confirm.

CC @mont29

Can confirm. CC @mont29

This issue was referenced by 9897ef6a20

This issue was referenced by 9897ef6a20dbbcf834ea949013daebfdd0b4e6de

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-05-20 15:31:14 +02:00

Added subscriber: @alexfaiad

Added subscriber: @alexfaiad

Hi, I'm still having this problem. I have a rig that is linked from another file. When I parent an object to a bone everything works well, but when I reload the file it's messed up. Nothing I tried seems to work. Any suggestion? Using Ubuntu 20.04.1 64bits Mate edition. Tried both Blender 2.85 and 2.9
I'm attaching my system specs{F8834537}

Hi, I'm still having this problem. I have a rig that is linked from another file. When I parent an object to a bone everything works well, but when I reload the file it's messed up. Nothing I tried seems to work. Any suggestion? Using Ubuntu 20.04.1 64bits Mate edition. Tried both Blender 2.85 and 2.9 I'm attaching my system specs{[F8834537](https://archive.blender.org/developer/F8834537/system-info.txt)}
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70948
No description provided.