Fix T70948: Library Override: Parenting library override objects does not save offset from parent.

Parent inverse matrix needs to be overridable as well...